# api/v1alpha1/openapi.yaml
@@ -212,7 +212,7 @@ components:
           - health
       required:
         - type
-        - state
+        - status
         - path
       properties:
         type:
@@ -220,8 +220,9 @@ components:
           format: uri-reference
           readOnly: true
           example: "three-tier-demo-sp.dcm.io/health"
-        state:
+        status:
           type: string
+          description: Health status
           example: "healthy"
         path:
           type: string
